--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,62 @@
 * {
   padding:0;
   margin:0;
-  font-family: 'Roboto', sans-serif;
-}
-
-/*Polymer side Nav*/
-body {
-  font-family: sans-serif;
-}
-#navheader {
-  background-color: #56ba89;
-}
-.content {
-  padding: 20px;
-}
-/*...*/
-
-.clearfix {
-  overflow: auto;
-}
-
-.education-entry, .work-entry, .project-entry {
-  padding: 0 5%;
-
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 h1 {
-  font-size: 40px;
-  color: #f5a623;
-  line-height: 48px;
-  display: inline;
+  font-weight: 700;
+  font-size: 160%;
+  color: #999;
+  padding-top: 2%;
 }
 
 h2 {
-  font-weight: bold;
-  font-size: 24px;
-  color: #999;
-  line-height: 29px;
-  padding: 10px;
-}
-
-h3 {
   font-style: italic;
   font-size: 20px;
   color: #000;
   line-height: 22px;
 }
 
-h4 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #4a4a4a;
-  line-height: 17px;
+span {
+  padding: 0 5%;
 }
 
-h2, h3, h4, h5 {
-  padding: 10px 5%;
+p {
+  font-size: 100%;
+  color: #333;
+  line-height: 150%;
 }
 
+a {
+  color: #0d7798;
+  text-decoration: none;
+  margin-top: 1.5%;
+  font-size: 110%;
+  display: block;
+}
 
+li {
+  font-size: 100%;
+  color: #333;
+  line-height: 150%;
+}
+
+.hidden {
+  display:none;
+}
+
+.core-selected {
+  font-weight: normal;
+}
+
+.icons {
+  padding: 25%;
+}
+
+.menuItems {
+  margin: 0 0 0 5%;
+}
 
 .date-text {
   font-style: italic;
@@ -74,150 +72,46 @@ h2, h3, h4, h5 {
   color: #999;
   line-height: 16px;
   float: right;
-
 }
 
-p {
-  font-size: 14px;
-  color: #333;
-  line-height: 21px;
+#name {
+  font-size: 100%;
+  font-weight: 700;
+  display: inline;
 }
 
-a {
-  color: #1199c3;
-  text-decoration: none;
-  margin: 10px 0 0 0;
-  margin-top: 10px;
-  display: block;
-}
-
-.welcome-message {
+#role {
+  font-size: 65%;
+  font-weight: 300;
   font-style: italic;
-  font-size: 18px;
-  color: #f3f3f3;
-  line-height: 28px;
 }
 
-#skillsH3 {
-  color: #f5ae23;
-  display: none;
+#navheader {
+  background-color: #56ba89;
 }
 
-.orange {
-  background-color: #f5ae23;
+#bioPic {
+  margin: 8% 0 0 0;
+  height: 30%;
+  width: 30%;
 }
 
-.orange-text {
-  color: #f5ae23;
+#main {
+  padding: 0 2%;
 }
 
-.white-text {
-  font-weight: bold;
-  color: #fff;
-}
-
-.gray {
-  background-color: #f3f3f3;
-  padding: 0 0 10px 0;
-  clear:both;
-}
-
-.dark-gray {
-  background-color: #4a4a4a;
-}
-
-/* TODO: Replace with image later */
-#header {
-  background-color: #484848;
-}
-
-.flex-box {
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 10px;
-}
-
-.center-content {
-  padding: 2.5% 5%;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.biopic {
-  float: left;
-  padding: 10px;
-  width: 200px;
-  display: none;
-}
-
-img {
-  padding: 10px;
-}
-
-/* Bar chart stuff */
-.chart div {
-  font: 10px sans-serif;
-  background-color: #4A4A4A;
-  text-align: right;
-  padding: 3px;
-  margin: 1px;
-  height: 12px;
-  color: white;
-  display: inline-block;
-}
-
-span {
-  padding: 5px;
-}
-
-#letsConnect {
-  text-align: center;
-}
-
-@media only screen and (max-width: 1024px) {
-  #letsConnect {
-    margin-top: 5%;
-  }
-}
-
-@media only screen and (max-width:900px) {
-  .biopic {
-    width: 175px;
-  }
-}
-
-@media only screen and (max-width: 750px) {
-  #letsConnect {
-    margin-top: 10%;
-  }
-  .biopic {
-    width: 150px;
-  }
-  .welcome-message {
-    display: none;
-  }
+#home {
+  padding-top: 2%;
 }
 
 #map {
   display: block;
   height: 100%;
-  margin: 0 5%;
+  margin: 0 0.5%;
 }
 
 #mapDiv {
   height: 400px;
   width: 100%;
   padding: 0 0 5% 0;
-}
-
-@media only screen and (min-width: 750px) {
-  #skillsH3,
-  .biopic {
-    display: block;
-  }
 }
