--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ h1 {
 
 h2 {
   font-style: italic;
+  font-weight: 700;
   font-size: 20px;
   color: #000;
   line-height: 22px;
@@ -26,6 +27,7 @@ p {
   font-size: 100%;
   color: #333;
   line-height: 150%;
+  font-weight: 300;
 }
 
 a {
@@ -38,6 +40,7 @@ a {
 
 li {
   font-size: 100%;
+  font-weight: 300;
   color: #333;
   line-height: 150%;
 }
@@ -61,6 +64,7 @@ li {
 .date-text {
   font-style: italic;
   font-size: 14px;
+  font-weight: 300;
   color: #999;
   line-height: 16px;
   float: left;
@@ -69,9 +73,26 @@ li {
 .location-text {
   font-style: italic;
   font-size: 14px;
+  font-weight: 300;
   color: #999;
   line-height: 16px;
   float: right;
+}
+
+.main {
+  padding: 0 2%;
+}
+
+.gray {
+  background-color: #f3f3f3;
+  padding-bottom: 1.5%;
+  margin-top: 1.5%;
+  clear:both;
+}
+
+.welcome-message {
+  font-style: italic;
+  font-weight: 400;
 }
 
 #name {
@@ -94,10 +115,6 @@ li {
   margin: 8% 0 0 0;
   height: 30%;
   width: 30%;
-}
-
-#main {
-  padding: 0 2%;
 }
 
 #home {
