--- a/css/style.css
+++ b/css/style.css
@@ -150,8 +150,8 @@ li {
 
 #mapDiv {
   height: 400px;
-  width: 100%;
-  padding: 0 0 5% 0;
+  width: 80%;
+  padding-bottom: 5%;
 }
 
 #letsConnect {
@@ -162,6 +162,9 @@ li {
 @media only screen and (max-width: 1024px) {
   #letsConnect {
     margin-top: 5%;
+  }
+  #mapDiv {
+    height: 200px;
   }
 }
 
